Bug 1909826 - Improve MediaDecoder::SetCDMProxy to better support invalid CDM proxy types.

This patch makes it so that we more gracefully handle unsupported or
disabled CDM proxy types. It will diagnostic assert but barring that now
return a more appropriate error code instead of attempting to use the
CDM with the state machine.

Differential Revision: https://phabricator.services.mozilla.com/D245284